fixing text spacing, whitespace margin above banner

--- a/shared/css/professional_learning_marketing_banner.scss
+++ b/shared/css/professional_learning_marketing_banner.scss
@@ -28,7 +28,6 @@ $dark_blue_background_colour: #0d4172;
 }
 
 .homepage-professional-learning-banner {
-  margin-top: 30px;
   margin-bottom: 30px;
 
   a {
@@ -78,7 +77,7 @@ $dark_blue_background_colour: #0d4172;
 
       .header {
         color: black;
-        padding: 15px 10px 10px 30px;
+        padding: 15px 10px 5px 30px;
         position: relative;
       }
 
@@ -127,7 +126,7 @@ $dark_blue_background_colour: #0d4172;
 
       .header {
         color: white;
-        padding: 15px 10px 10px 30px;
+        padding: 15px 10px 5px 30px;
         text-align: center;
         top: 0px;
       }
